# cis630

CIS621/src/algos/: MissionCritical.java
CIS630/project1/src/: CMakeLists.txt  MakeFile  Makefile  fileread.cxx  pagerank  pagerank.cxx  pagerankcopy.cxx  pagerankcopy1.cxx  pagerankflatarray.cxx  pagerankmpi.cxx  pagerankmpimmap.cxx  pagerankmpisr.cxx
CIS630/project2/src/bulletinboard/: Peer.java
CIS630/project2/src/bullitenboard/: Peer.java  ServingPeer.java
CUDA/: blur.cu  cube  cube.cu  grayscale.cu
Data-Structures/: a.out  avl.c  cis51312c.cxx  mintest.cxx  tree  tree.c
HackerRank/src/byteland/: Solution.java
MPI/Demo/: a.out  exercise1  exercise1.c  loop  loop.c  mpiproc.c
OpenGL tutorial/tutorial01_first_window/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VisOnMultiCore/assign1/src/: assignment1.cxx
cis_541/Project1/A/misc/: VTK Build console  install cmake logs
cis_541/Project1/A/src/: CMakeLists.txt  project1A.cxx
cis_541/Project1/B/src/: CMakeLists.txt
cis_541/Project1/B/toSubmit/: project1B.cxx
cis_541/Project1/C/src/: CMakeLists.txt  project1C.cxx
cis_541/Project1/D/src/: CMakeLists.txt  execute.sh  project1D.cxx
cis_541/Project1/E/src/: CMakeLists.txt  project1E.cxx
cis_541/Project1/E_debug/src/: project1E.cxx
cis_541/Project1/F-CDUX/misc/: shading.cxx
cis_541/Project1/F-CDUX/src/: CMakeLists.txt  project1Fcdux.cxx
cis_541/Project1/F/src/: project1F.cxx
cis_541/Project1/F_CDUX/: .~lock.Camera Positions Results.xlsx#  Camera Positions Results.xlsx  Quality Analysis (copy).xlsx  Quality Analysis for Spherical Geometry.xlsx  Quality Analysis.xlsx  Triangle representation.ods  Untitled Document 1  arbitrary_focused_cameras  arbitrary_focused_cameras_1  cinema_style_cameras  quality
cis_541/Project1/F_CDUX/src/: CMakeLists.txt  CMakeLists.txt.bkp  CMakeLists.txt.bkp2  Camera.cxx  CameraPositions.cxx  CameraPositions.h  CameraPositions.h.gch  MatrixOperations.h  RenderFunctions.cxx  RenderFunctions.h  Screen.h  TriangleOperations.cxx  TriangleOperations.h  Utilities.cxx  Utilities.h  camera_active_pixels.cxx  proc_active_pixels.cxx  project1F.cxx  project1F.cxx.bkp  project1F.cxx.bkp1  quality_camera.cxx  quality_mpi_work.cxx  quality_triangle.cxx  quality_work.cxx  test_renders.cxx  triangle_active_pixels.cxx  visit_export.py
cis_541/Project2/A/src/: CMakeLists.txt  project2A.cxx
cis_541/Project2/B/src/: CMakeLists.txt  project2B.cxx
cis_541/ProjectG/: Curves and Surfaces.odp
cis_541/ProjectG/src/: CMakeLists.txt  CMakeLists.txt.bkp  CameraPositions.cxx  OrientedArrow.cxx  arrow.cxx  bezier.cpp  bezier.cpp.bkp  bezier.cpp.bkp1  bezier.cxx  nurbs.cxx
cis_541/Project_541/: Ray-Tracer.pptx
cis_541/Project_541/src/: CMakeLists.txt  MatrixOperations.h  Triangle.h  VectorOperations.cxx  VectorOperations.h  VectorOperations.h.gch  invese  project541.cxx  project541.cxx.bkp1  project541.cxx.bkp2
cs344-master/Problem Sets/Problem Set 2/: student_func.cu
project1/src/: Makefile  mpipagerank  pagerankflatarray.cxx  pagerankmpi.cxx  pagerankmpiparse.cxx  pagerankmpisr.cxx
research/: Camera Positions Results.xlsx
research/src/: CMakeLists.txt  Camera.cxx  Camera.h  CameraPositions.cxx  RenderFunctions.cxx  Screen.h  TriangleOperations.cxx  TriangleOperations.h  Utilities.cxx  Utilities.h  camera_active_pixels.cxx  sample.cxx
toSubmit/: Makefile  pagerankmpi.cxx  readme.txt
tutorial01_first_window/: CMakeLists.txt
vtkmtutorials/: CMakeFile.txt
vtkmtutorials/src/: .vectorexample.cxx.swp  CMakeLists.txt  elevationfilter.cxx  vecex.cxx
workspace/.metadata/: version.ini
workspace/.metadata/.mylyn/.taskListIndex/: segments_1
workspace/.metadata/.plugins/org.eclipse.core.resources/: 2.snap
workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/CIS621/: .markers.snap
workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/CIS621/.indexes/af/: history.index
workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
workspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
workspace/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
workspace/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
workspace/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_3
workspace/.metadata/.plugins/org.eclipse.jdt.core/: 1028045268.index  savedIndexNames.txt
workspace/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
workspace/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/2/9/: refactorings.history  refactorings.index
workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cdux-titan_0/: node.properties
workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cdux-titan_0/FP.local.files_0/: node.properties
workspace/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.cdux-titan_0/H.local_16/: node.properties
workspace/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
workspace/CIS621/: .project
workspace/CIS621/src/algos/: MissionCritical.java
